<resources>
    <string name="app_name">Pwani CU</string>
    <string name="home">Home</string>
    <string name="about_cu">About CU</string>
    <string name="theme_verse">Theme Verse</string>
    <string name="bs_registration">BS Registration</string>
    <string name="forum">Forum</string>
    <string name="share_feedback">Share Feedback</string>
    <string name="help">Help</string>
    <string name="cu_social_media">Cu Social Media</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log">Login</string>
    <string name="preferences">Preferences</string>
    <string name="cu_name">Pwani University CU</string>
    <string name="cu_mail">pucusecretary@gmail.com</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="share">Share App</string>
    <string name="today_program">Today Program</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thur">Thursday</string>
    <string name="saf">SAFARICOM</string>
    <string name="airtel">AIRTEL</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="mon_program">
        1. Morning Devotion from 5a.m GS1 \n
        2. Lunch Hour prayers at 1p.m. behind Runda \n
        3. Evening Prayers at 5p.m. Behind Runda \n
        4. Night Prayers at 8p.m. in GS1.\n
    </string>
    <string name="tue_program">
        1. Morning Devotion from 5a.m GS1 \n
        2. Lunch Hour prayers at 1p.m. behind Runda \n
        3. Evening Prayers at 5p.m. Behind Runda \n
        4. Best P Classes at GS1 8-9:00pm\n
    </string>
    <string name="wed_program">
        1. Morning Devotion from 5a.m GS1 \n
        2. Departmental Prayers. 1-2:00pm\n
        3. Evening Prayers at 5p.m. Behind Runda \n
        4. Class Fellowship at 8p.m. in GS1\n
        5. Brothers and Sister Fellowship after 2 Weeks.\n
    </string>
    <string name="thur_program">
        1. Morning Devotion from 5a.m GS1 \n
        2. Family meetings at various venues within Campus at 1p.m.\n
        3. Evening Prayers at 5p.m. Behind Runda \n
        4. Night Prayers at 8p.m. in GS1.\n
        5. Praise and Worship Practices at 8-10:00pm in LTN Hall.\n
    </string>
    <string name="fri_program">
        1. Morning Devotion from 5a.m GS1 \n
        2. Family meetings at various venues within Campus at 1p.m.\n
        3. Evening Prayers at 5p.m. Behind Runda \n
        4. Friday Service 8:00pm- 10:00pm\n
    </string>
    <string name="sat_program">
        1. Choir Practices 2:00pm-4:00p.m.\n
        2. IT Department Meeting at Botanical Garden from 2-4:00pm\n
        3. Praise and Worship 4:00p.m - 6:00pm.\n
        4. Ushering Department Meeting at 5:00pm - 6:00pm at EL.\n
        5. Bible Study 8pm - 9:00pm.\n
    </string>
    <string name="sun_program">
        1. Morning Devotion from 5:30a.m-6:30 LTN \n
        2. First Service 6:30a.m - 8:45a.m.\n
        3. Second Service 8:45 a.m. - 10:45am\n
        4. Third service 11:00am - 1:00p.m.\n
        5. Intercessory Prayers at 5p.m. Behind Runda\n
    </string>
    <string name="sample_text">
    <![CDATA[<font color=\'#cc0029\'>Some</font>
     random <font color=\'#ffcc00\'>text</font>]]></string>
    <string name="share_about_cu">
        The Pwani University Christian Union is a body bound by one faith in God,
        the unity based on a common belief in the LORD JESUS as Saviour and living
        as the Holy Scriptures say. The CU is entirely non-political and non-profit.\n\n

             Objectives\n
        1.  <b>Evangelism\n</b>
            To present JESUS CHRIST as Saviour, LORD and God to students in
            the University to lead them to personal faith in Him.\n\n

        2. <b>Discipleship\n</b>
            To deepen and strengthen the spiritual life of students and equip
            them for a lifetime of service in the family, church and society.\n\n

        3. <b>Mission\n</b>
            To encourage and equip students to take the good news of Christ to every
            nation on Earth and to be part of the church\'s witness to the good news,
            to be salt and Light in the World.\n\n

        4. <b>Leadership Development\n</b>
            To develop Christian leaders who will play key roles while on-campus,
            in church and wider society.\n\n
    </string>
    <string name="about_cu_desc">
        The Pwani University Christian Union is a body bound by one faith in God,
        the unity based on a common belief in the LORD JESUS as Saviour and living
        as the Holy Scriptures say. The CU is entirely non-political and non-profit.\n\n

             Objectives\n
        1.  <b>Evangelism\n</b>
            To present JESUS CHRIST as Saviour, LORD and God to students in
            the University to lead them to personal faith in Him.\n\n

        2. <b>Discipleship\n</b>
            To deepen and strengthen the spiritual life of students and equip
            them for a lifetime of service in the family, church and society.\n\n

        3. <b>Mission\n</b>
            To encourage and equip students to take the good news of Christ to every
            nation on Earth and to be part of the church\'s witness to the good news,
            to be salt and Light in the World.\n\n

        4. <b>Leadership Development\n</b>
            To develop Christian leaders who will play key roles while on-campus,
            in church and wider society.\n\n

        <b>STATEMENT OF FAITH\n</b>
        1. The unity of the Father, Son and the Holy Spirit in God\'s head.\n
        2. The Sovereignty of God in Creation, revolution, redemption and final judgement. \n
        3. The divined inspiration and entire trustworthiness of Holy Scripture, as originally
        given and its supreme authority in all matters of faith and conduct.\n
        4. The universal sinfulness and guilt of all men since the Fall, rendering them subject
        to God\'s wrath and condemnation.\n
        5. Redemption from the guilt, penalty, dominion and pollution of solely through the sacrificial death
        \(Our Representative and substitution\) of the; LORD JESUS from the dead and His ascension to the right hand.\n\n

</string>
    <string name="read_more">Read More…</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="semester_name">Semester 2</string>
    <string name="semester_verse">James 3:17</string>
    <string name="year">Year 2019</string>
    <string name="bible_version">Version: NIV</string>
    <string name="event_background">Description</string>
    <string name="event_name">Event or Notice Name</string>
    <string name="event_date">12/08/2019</string>
    <string name="location">Pwani University</string>
    <string name="event_category">Notice</string>
    <string name="event_d">Event Date</string>
    <string name="share_program">Share Program to Friends</string>
    <string name="program_name">Evangelism Weekend</string>
    <string name="event_date_sharing">21 April 2019 Sharing</string>
    <string name="thought_of_day"> Thought of The Day</string>
    <string name="prayer_of_the_day">Prayer of Day</string>
    <string name="special_announcement">Special Announcement</string>
    <string name="verse">But the wisdom that comes from heaven is first of all pure; then peace-loving
                        , considerate, submissive, full of mercy and good fruit, impartial and sincere.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="phone_number">Phone Number\(07…\)</string>
    <string name="register">Register</string>
    <string name="register_here">No account? Register here</string>
    <string name="enter_text_here">Enter Text here</string>
    <string name="send_message">Send Message</string>
    <string name="sender">Sender</string>
    <string name="time">Time</string>
    <string name="logout">Logout</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="pucu">Pwani University Christian Union</string>
    <string name="mission">The model of Godly Transformation to Church and society</string>
    <string name="why_today"> </string>
    <string name="why_notices"> </string>
    <string name="facebook">FACEBOOK</string>
    <string name="save_call">Do you want to Save Contact or Call Pwani University Christian Union Directly?</string>
    <string name="save_or">Save the contact First to text Pwani Pwani University Christian Union in WhatsApp.</string>
    <string name="save">SAVE</string>
    <string name="call">Call</string>
    <string name="prayer_sample">Thank you Lord God Almighty. Amen.</string>
    <string name="register_activity"><b><u> Pwani CU Register</u></b></string>
    <string name="theme_topic">Sober Living</string>
    <string-array name="help_me">
        <item><b>Today</b>\n Developed for personal daily devotion. Each day, while online you can view
                                a daily devotion to nourish your Spiritual Being.</item>

        <item><b>Notices</b>\n Provides the current notices from the CU Desk to
                                keep the members ever updated on the CU program. </item>

        <item><b>Semester Program</b>\n Provides a detailed list of activities
                                    organised by the CU for the whole semester.
                                    Today activity will be highlighted in Blue.  </item>

        <item><b>About CU</b>\n Displays the Vision, Mission and Statement of faith of the
                                    Pwani University Christian Union as well as the objectives
                                    of the Union. The Read More button at the bottom, when clicked,
                                    allows you to access the CU Website directly. </item>

        <item><b>Theme Verse</b>\n Provides the Theme Verses of the Current semester
                                    as well as Theme verses of the past Years and Semester. </item>

        <item><b>Bible Study Registration</b>\n Allows members to register Bible study
                                Online from the link to the google form provided every semester.
                                The form is then closed once the application time is over.
                                Members are encouraged to register and register on time. </item>

        <item><b>Social Media</b>\n Provides our Social Media Account and Phone numbers that
                                can be used to communicate with us. </item>

        <item><b>Forum</b>\n This screen provides a platform for members to engage each other,
                                exchange ideas to the growth of us all spiritually.</item>
    </string-array>
    <string-array name="media_name">
        <item>Safaricom Number</item>
        <item>Airtel Number</item>
        <item>Email</item>
        <item>FaceBook</item>
        <item>WhatsApp</item>
        <item>Twitter</item>
        <item>Instagram</item>
        <item>Youtube</item>
    </string-array>
    <string-array name="media_account">
        <item>0743304418</item>
        <item>0753271113</item>
        <item>pucusecretary@gmail.com</item>
        <item>Official Pwani University CU</item>
        <item>0743304418</item>
        <item>\@pwanicu</item>
        <item>\@pwanicu</item>
        <item>Pwani University Christian Union</item>
    </string-array>
</resources>