<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/p_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/theme_verse" />

        <TextView
            android:id="@+id/p_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/p_img"
            android:layout_toRightOf="@+id/p_img"
            android:gravity="center"
            android:text="@string/program_name"
            android:textAllCaps="true"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/p_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p_img"
            android:minLines="5"
            android:text="@string/about_cu_desc" />

        <LinearLayout
            android:id="@+id/p_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p_desc"
            android:orientation="horizontal"
            android:weightSum=".9">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/event_d"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:gravity="start"
                android:text="@string/event_date"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight=".1"
                android:contentDescription="@string/share_program"
                android:src="@android:drawable/ic_menu_share" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/p_linear"
            android:background="@color/colorAccent" />
    </RelativeLayout>
</android.support.v7.widget.CardView>