<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/b3">


        <ImageView
            android:id="@+id/share_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/event_background"
            android:src="@android:drawable/ic_menu_share" />

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_event"
            android:layout_marginTop="70dp"
            android:gravity="start"
            android:padding="4dp"
            android:text="@string/event_name"
            android:textColor="@color/secondaryTextColor"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_name"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/about_cu_desc" />

        <LinearLayout
            android:id="@+id/date_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:drawableStart="@drawable/ic_date"
                android:drawableLeft="@drawable/ic_date"
                android:drawablePadding="2dp"
                android:gravity="start"
                android:text="@string/event_date"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:drawableStart="@drawable/ic_event"
                android:drawableLeft="@drawable/ic_event"
                android:drawablePadding="2dp"
                android:gravity="end"
                android:text="@string/event_category"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>