<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b3">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/theme_verse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/semester_verse"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/theme_narration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_cu_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:weightSum=".9">

                <TextView
                    android:id="@+id/theme_sem_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/semester_name"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/theme_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/year"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/theme_version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/bible_version"
                    android:textColor="@color/secondaryLightColor"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/theme_next_previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/colorAccent"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:menu="@menu/next_previous" />

</android.support.design.widget.CoordinatorLayout>