<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/c_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/about_cu_desc" />

        <LinearLayout
            android:id="@+id/c_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/c_message"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/c_sender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/sender"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/c_time_sent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="end"
                android:text="@string/time"
                android:textColor="@color/primaryLightColor"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>